Switching to new version 6ff6416c363d